2009-Oct28	cpo	Tag V01-05-01.  Put back support for x86_64 in packages.mk.
                                        Put in pragma pack(4) in bldData.hh.
2009-Oct27	cpo	Tag V01-05-00.  Tomy added phase cavity support.
2009-Oct08	weaver	Tag V01-04-00.  Added EvrConfig_V2 for opcode support.
2009-Sep21      tomytsai    Add xtc support for EBeam bld
2009-Sep14      tomytsai    Add Epics data parsing in app/xtcreader.cc
2009-Aug27      tomytsai    Add 1. epics xtc data reading library under pdsdata/epics 2. xtc reader sample program in pdsdata/app and change xtc typeid changes for epics and bld data
2009-Aug24      cpo                     Add Matt's BldInfo classes and put it TypeId for the FEE GasDet.
		weaver			Add missing transitions {Map,Unconfigure,Unmap} into xtcmonserver.
2009-Aug15	weaver	Tag V00-05-03.  Applied Bozek's detector name changes.
					Added master EVG fiducial count details.
2009-Aug12	weaver	Tag V00-05-02.  Tagged for production release.
2009-Jul22	weaver	Tag V00-05-01.  Modified RunControl configuration data.
					Added EVR vectoring field to TimeStamp.
2009-Jul17	jackp			Added pnCCD support and made strings match enums
2009-Jul16      cpo                     Put CAMP stuff in DetInfo enums.
2009-Jul-14	weaver	Tag V00-05-00.	Added run control configuration classes.  Removed
					Pause/Resume and added Begin/EndCalibCycle transitions.
					Changed ClockTime default ctor to not zero memory.
2009-Jul-10     cpo                     Improvements to acqiris configuration classes.
2009-Jun-01	weaver	Tag V00-04-00.	Tagged Amedeo's changes to xtc/Sequence.
2009-Apr-16	weaver			Added pulnix directory and its configuration data type.
					Added out-of-order damage type.
2009-Apr-10     cpo                     Change Acqiris waveform() to return
                                        int16 instead of uint16.  Add method
                                        to get index of first valid point.